# nuubot4

./: .gitignore  AGENTS.md  Cargo.toml  HANDOFF.md  rtest.sh
audits/: btrunner-30m-implementation-audit-v1.md  btrunner-30m-implementation-audit-v2.md  btrunner-30m-plan-audit-v1.md  btrunner-30m-plan-audit-v2.md  btrunner-30m-timestamp-plan-audit-v1.md  btrunner-runtime-implementation-audit-v1.md  btrunner-runtime-plan-audit-v1.md
plans/: btrunner-runtime-stage.md  rust-port-architecture-proposal.md
src/: botcycle.rs  btrunner.rs  clock.rs  cloid.rs  common.rs  config.rs  datastore.rs  executor.rs  lib.rs  market.rs  replay.rs  risk.rs  runtime.rs  setup.rs  signaler.rs
src/common/: error.rs  logging.rs  program.rs
src/datastore/: models.rs  sweep.rs
src/executor/: observer.rs
src/replay/: csv.rs  parquet.rs
src/risk/: balanced.rs
src/signaler/: macross.rs
wiki/: abbreviations.md  cloid.md  index.md  ownership.md  project.md  recon.md  rust-port.md  soul.md  user.md
wiki/coding/: index.md  rules.md  style.md
wiki/logic/: btrunner.md  executor.md  risk.md  runner.md  signaler.md
