[package]
name = "nuubot4"
version = "0.1.0"
edition = "2024"

[dependencies]
arrow-array = "59.0.0"
chrono = "0.4.41"
csv = "1.3.1"
parquet = { version = "59.0.0", features = ["arrow"] }
rusqlite = { version = "0.37.0", features = ["bundled"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
toml = "0.9.2"
